# Flappy_bird_with_bevy

./: .gitignore  Cargo.toml  README.md  win.sh
media/: Flappy_Bird_Gameplay.mp4:Zone.Identifier
src/: main.rs
